#3 Add communication between VSTO and client

--- a/Rumors.Desktop/Pages/PoCLandingPage.xaml
+++ b/Rumors.Desktop/Pages/PoCLandingPage.xaml
@@ -27,6 +27,7 @@
         </StackPanel>
         
         <RichTextBox x:Name="logRtichTextBox"
+                     Padding="6"
                      Grid.Row="1"
                      VerticalScrollBarVisibility="Auto"
                      IsReadOnly="True"/>
