--- a/Rumors.Desktop/App.xaml
+++ b/Rumors.Desktop/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Rumors.Desktop.Common"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Exit="Application_Exit">
     <Application.Resources>
         <Style TargetType="FrameworkElement">
             <Setter Property="TextOptions.TextRenderingMode" Value="Auto"/>
